fixed touch on ios

--- a/HTML5/EaselJS/follow/styles/styles.css
+++ b/HTML5/EaselJS/follow/styles/styles.css
@@ -9,5 +9,5 @@ body
 
 canvas
 {
-	webkit-user-select:none;
+	/*webkit-user-select:none;*/
 }
